--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </h1>
 
     <nav class ="testing">
-      <a href="pr_panelist" class="PR">PR Panelist</a>
+      <a href="pr_panelist.html" class="PR">PR Panelist</a>
       <a href="https://austistats.com/?season=2025+Q4" class="PR">Austistats</a>
       <a href="" class="PR">Upcoming Brackets (coming soon!)</a>
       <a href="https://www.youtube.com/@southjerseyunderground" class="PR">SJU Youtube Channel</a>
@@ -191,3 +191,4 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
 
 
 </html>
+
