--- a/pr_panelist.html
+++ b/pr_panelist.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<link rel="stylesheet" a href="style_panelist">
+<link rel="stylesheet" a href="style_panelist.css">
 <link rel ="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZcrlqlFHGiHMllD965_4ksx7rPTNa6u
     j5Q&s"/>
 <h1>South Jersey Panelists:
@@ -61,3 +61,4 @@
 
 <footer class = "credits">
     <p>Credit to <strong>TJ13</strong> for background images.</p>
+
