--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav class ="testing">
       <a href="pr_panelist.html" class="PR">PR Panelist</a>
-      <a href="https://austistats.com/?season=2025+Q4" class="PR">Austistats</a>
+     <a href="" class="PR">????</a>
       <a href="" class="PR">Upcoming Brackets (coming soon!)</a>
       <a href="https://www.youtube.com/@southjerseyunderground" class="PR">SJU Youtube Channel</a>
     </nav>
@@ -183,5 +183,6 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
 
 
 </html>
+
 
 
