--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <h1 class ="Top">
      South Jersey PR Q4
      <a href="https://x.com/SJUndergroundSB">
-    <img class ="SJimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZcrlqlFHGiHMllD965_4ksx7rPTNa6u
-    j5Q&s"
+    <img class ="SJimage" src="Header_Logo.png"
     width="90"
     height="90"
     />
@@ -183,6 +182,7 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
 
 
 </html>
+
 
 
 
