--- a/index.html
+++ b/index.html
@@ -175,13 +175,14 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
     allowfullscreen></iframe>
 
     <footer class = "credits">
-    <p>Credit to <strong>TJ13</strong> for background images.</p>
+    <p>Credit to <strong>TJ13</strong> for the SJU images.</p>
   
     </footer>
   </body>
 
 
 </html>
+
 
 
 
