--- a/pr_panelist.html
+++ b/pr_panelist.html
@@ -60,5 +60,6 @@
 </p2>
 
 <footer class = "credits">
-    <p>Credit to <strong>TJ13</strong> for background images.</p>
+    <p>Credit to <strong>TJ13</strong> for the SJU images.</p>
+
 
