--- a/pr_panelist.html
+++ b/pr_panelist.html
@@ -3,8 +3,7 @@
 <link rel ="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZcrlqlFHGiHMllD965_4ksx7rPTNa6u
     j5Q&s"/>
 <h1>South Jersey Panelists:
-    <img class ="SJimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZcrlqlFHGiHMllD965_4ksx7rPTNa6u
-    j5Q&s"
+    <img class ="SJimage" src="Header_Logo.png"
     width="100"
     height="100"
     >
@@ -61,5 +60,6 @@
 
 <footer class = "credits">
     <p>Credit to <strong>TJ13</strong> for the SJU images.</p>
+
 
 
