--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     width="90"
     height="90"
     />
+<video autoplay loop muted class = "video">
+  <source src="https://www.dropbox.com/s/5g6huotw7j7uhrjmkkz4k/Test.mp4?raw=1" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
      </a>
     </h1>
 
@@ -182,6 +186,7 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
 
 
 </html>
+
 
 
 
