--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     height="90"
     />
         </a>
-<video autoplay loop muted class = "video">
+<video autoplay loop muted playsinline webkit-playsinline class = "video">
   <source src="https://www.dropbox.com/scl/fi/5g6huotw7j7uhrjmkkz4k/Test.mp4?rlkey=1pyzn00cmjk86rhqk7eg3m7ph&st=k523jtu9&dl=1" 
     type="video/mp4">
   Your browser does not support the video tag.
@@ -188,6 +188,7 @@ Vince thrives on understanding a player’s internal “switches.” Everyone ha
 
 
 </html>
+
 
 
 
